--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "less-loader": "^4.1.0",
     "node-sass": "^4.11.0",
     "ofcold-security-code": "^1.0.10",
+    "qrcode.vue": "^1.7.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.21",
     "vue-clipboard2": "^0.3.1",
@@ -30,7 +31,6 @@
     "vue-loading-overlay": "^3.4.2",
     "vue-material-design-icons": "^2.6.0",
     "vue-otp-input": "^1.0.0",
-    "vue-qrcode": "^0.3.3",
     "vue-router": "^3.0.1",
     "vue-scrollactive": "^0.8.0",
     "vue-switches": "^2.0.1",
