--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@celo/contractkit": "^0.4.14",
+    "@celo/contractkit": "0.4.14",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "axios": "^0.19.2",
+    "vue-axios": "^2.1.4",
     "date-fns": "^1.30.1",
     "firebase": "^5.8.6",
+    "flag-icon-css": "^3.3.0",
     "ion-rangeslider": "^2.3.0",
     "jquery": "^3.4.1",
     "jshint": "^2.10.1",
