--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "node-sass": "^4.11.0",
+    "vue-i18n": "^8.17.4",
     "ofcold-security-code": "^1.0.10",
     "qrcode.vue": "^1.7.0",
     "sass-loader": "^7.1.0",
