--- a/package.json
+++ b/package.json
@@ -13,39 +13,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@celo/contractkit": "0.4.14",
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "axios": "^0.19.2",
-    "vue-axios": "^2.1.4",
-    "date-fns": "^1.30.1",
-    "firebase": "^5.8.6",
-    "flag-icon-css": "^3.3.0",
-    "ion-rangeslider": "^2.3.0",
-    "jquery": "^3.4.1",
-    "jshint": "^2.10.1",
+    "web3": "^1.2.6",
+    "vue": "^2.5.21",
+    "vuex": "^3.5.1",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "node-sass": "^4.11.0",
+    "axios": "^0.19.2",
+    "jshint": "^2.10.1",
+    "vuetify": "^1.3.0",
+    "jquery": "^3.4.1",
     "vue-i18n": "^8.17.4",
-    "ofcold-security-code": "^1.0.10",
+    "node-sass": "^4.11.0",
+    "vue-axios": "^2.1.4",
+    "vuelidate": "^0.7.5",
+    "vue-router": "^3.0.1",
     "qrcode.vue": "^1.7.0",
     "sass-loader": "^7.1.0",
-    "vue": "^2.5.21",
+    "less-loader": "^4.1.0",
+    "flag-icon-css": "^3.3.0",
     "vue-clipboard2": "^0.3.1",
-    "vue-cool-select": "^2.0.1",
+    "@celo/contractkit": "0.4.14",
     "vue-loading-overlay": "^3.4.2",
-    "vue-material-design-icons": "^2.6.0",
-    "vue-otp-input": "^1.0.0",
-    "vue-router": "^3.0.1",
-    "vue-scrollactive": "^0.8.0",
-    "vue-switches": "^2.0.1",
-    "vue-tabs-component": "^1.5.0",
-    "vue-tel-input": "^2.0.13",
-    "vue2-scrollspy": "^2.3.1",
-    "vuelidate": "^0.7.5",
-    "vuetify": "^1.3.0",
-    "vuex": "^3.5.1",
-    "web3": "^1.2.6"
+    "@fortawesome/fontawesome-free": "^5.13.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
