--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "less-loader": "^4.1.0",
     "flag-icon-css": "^3.3.0",
     "vue-clipboard2": "^0.3.1",
-    "@celo/contractkit": "0.4.14",
+    "@celo/contractkit": "1.0.1",
+    "web3-eth-contract": "^1.3.3",
     "vue-loading-overlay": "^3.4.2",
     "@fortawesome/fontawesome-free": "^5.13.0"
   },
