--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "qrcode.vue": "^1.7.0",
     "sass-loader": "^7.1.0",
     "less-loader": "^4.1.0",
+    "bignumber.js": "9.0.1",
     "flag-icon-css": "^3.3.0",
     "vue-clipboard2": "^0.3.1",
-    "@celo/contractkit": "1.0.1",
+    "@celo/contractkit": "1.2.0",
     "web3-eth-contract": "^1.3.3",
     "vue-loading-overlay": "^3.4.2",
     "@fortawesome/fontawesome-free": "^5.13.0"
